# bira-bachelor-files

./: .gitignore  README.md
courses/ADM REDES/Trabalho 2/: relatorio_t2_admredes.odt  trinoodoc.odt
courses/ALG GRAFOS/: ALG II
courses/ALG GRAFOS/jgrapht-0.8.2/: README.html  build.xml
courses/ALG II/Material Gustavo (2009)/: Aula2-Classes
courses/ARQ AVAN/: Anotacoes-ARQ-AVAN-COMP-GRAD-2005.rar  Grids.rar  algoritmo-evolutivo.rar  arquitetura-mimd.rar  arranjos-sistolicos.rar  cell.rar  sitemas-embarcados.rar  tolerancia-falhas.rar
courses/ARQ/Cell IBM/: tabelabench.ods
courses/CG/: Prova 2 - CG.txt
courses/CG/Projeto/: projeto_CG.key  relatorio_CG.pages
courses/CG/Tutoriais/: openglteste.c
courses/COMPSOC/Trabalho COMPSOC/: compsoc template.otp  doencasprofissionais.odp
courses/EMPREENDEDORES/Analises Grupos/: Formulario_para_Avaliacao-PN-pelos_alunos.doc  analiseEmpresas dia2.txt
courses/EMPREENDEDORES/Material Auxiliar/: Empreender_Virou_Carreira.rar  Modelo-PN-final.doc  Modelo-estudo_de_viabilidade_e_analise_FOFA.doc
courses/EMPREENDEDORES/Planos de Negócio/: Pn-1.odt  Pn.odt
courses/ENG SOFTWARE II/: Trabalho_VersãoSubmissão.rar
courses/ENG SOFTWARE II/Atividade 1/: Caso de uso - Eng Soft II.doc
courses/ENG SOFTWARE II/Atividade 2/: Grupo.txt  atividade2.entrarItem
courses/ENG SOFTWARE II/Exercício - Teste Funcional/: Teste Funcional Programa Cal.odt
courses/Estocásticos/: Prob and Statistics books
courses/Estocásticos/Trabalho/: trabEstocasticos.docx
courses/Gerência de Projetos/: Resumos a Fazer.txt
courses/Gerência de Projetos/Seminário/: slides_GIP_v1.key
courses/HCI/Aulas/: roteiro_aula6_doet_ucd-1.doc
courses/HCI/Material/: avaliacao_hci.pages
courses/INFERENCIA/Curso Ehlers  2009/: provas.rar
courses/LAB BD/: Material BD
courses/LAB BD/Outros/: Aula11.txt  Modelo-Relatorio.odt  remote_acess.txt
courses/NUM I/: juros.c
courses/NUM II/: T1NUM2.c  T2NUM2.c  T3NUM2.c  T4NUM2.c
courses/ORG/Resources/: hello.asm
courses/PROG CONCORRENTE/Provinhas/: grafoProvinha.graffle  provinhas.txt  provinhasT1.pages  provinhasT2.pages
courses/PROGWEB/TPW-Projetofinal/: model.graffle
courses/PROGWEB/Trabalhos/: Makefile  tpw_trab2.txt  trab1-progWeb.txt  (+1 more)
courses/RAD/: prova RAD 0910.txt
courses/REDES/: Aula 10 - networkLayer3  Aula 12 - transportLayer  Aula 13 - aplicationLayer  Aula 5 - phisicalLayer  Aula 6 - datalinkLayer1  Aula 7 - datalinkLayer2  Aula 9 - networkLayer2  Aula8 -networkLayer1  Cola monstro.rar
courses/REDES NEURAIS/: Gmatrix.c  Gmatrix.h  lu.cpp  uspop_timeseries.odt
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/: .gitignore  LICENSE.BSD  Makefile.am  README.txt  configure.ac
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/doc/: .gitignore  GNUmakefile.am  _footer.php  _header.php  changes.php  desc.php  index.php  install.php  legal.php  netlog.php  printer.css  rpl.5.php  rplctl.8.php  rpld.8.php  rpldev.4.php  screen.css  support.php  ttyreplay.1.php  ttyrpld.7.php
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/etc/: .gitignore  Makefile.am  rpld.conf  rpld.in
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/include/: rpl_endian.h  rpl_ioctl.h  rpl_packet.h  rpl_stdint.h
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/k_freebsd-7.0/: BSDmakefile  rpldev.c  rpldhk.diff
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/k_linux-2.6/: .gitignore  rpldev.c  rpldhk-2.6.22.diff  rpldhk-2.6.25.diff  rpldhk-2.6.27.diff
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/k_netbsd-4.0/: dev-install.sh  rpldev.c  rpldhk.diff
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/k_openbsd-4.3/: dev-install.sh  rpldhk_rpldev.diff
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/k_solaris-11/: rpldev.c  rpldev.conf  rpldhk.c  rpldhk.h
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/libHX-2.9/: Makefile.am  README.txt  configure.ac  libHX.pc.in
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/libHX-2.9/doc/: Makefile.am  changelog.txt  libHX_Documentation.lyx
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/libHX-2.9/src/: .gitignore  Makefile.am  arbtree.c  deque.c  dir.c  dl.c  format.c  internal.h  mc.c  misc.c  opt.c  proc.c  rand.c  string.c  tc-arbtree.c  tc-option.c  tx-arbtree.cpp  tx-cast.cpp  tx-compile.cpp  tx-dir.cpp  tx-list.cpp  tx-misc.cpp  tx-proc.cpp  tx-string.cpp
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/libHX-2.9/src/include/: Makefile.am  libHX.h
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/libHX-2.9/src/include/libHX/: arbtree.h  clist.h  defs.h  deque.h  list.h  misc.h  option.h  string.h
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/locale/: GNUmakefile.am  de.po  es.po  fa.po  fr.po  it.po  nb.po  nl.po  sv.po  ttyrpld.pot
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/m4lib/: getpwuid.m4
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/share/: ttyrpld.magic
courses/SO II/Projeto 1/Keyloggers prontos/Kernel Space/ttyrpld-2.52/user/: .gitignore  Makefile.am  compat.h  dev.h  infod.c  lib.c  lib.h  pctrl.c  pctrl.h  ptmx.c  rdsh.c  rdsh.h  replay.c  rplctl.c  rplcvt.c  rpld.c
courses/SO II/Projeto 1/Keyloggers prontos/User Space/lkl/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.in  lkl.c  lkl.h  main.c  net.c  output.c
courses/SO II/Projeto 1/Keyloggers prontos/User Space/lkl/.deps/: lkl.Po  main.Po  net.Po  output.Po
courses/SO II/Projeto 1/Keyloggers prontos/User Space/lkl/autom4te.cache/: output.1  output.2  requests  traces.1  traces.2  traces.3
courses/SO II/Projeto 1/Keyloggers prontos/User Space/lkl/keymaps/: dvorak_km  dvorak_kmALT  dvorak_kmUP  fr_km  fr_kmALT  fr_kmUP  it_km  it_kmUP  us_km  us_kmALT  us_kmUP
(+5911 files in other folders)
